Updates for 4.0.x
Fixes error when using the translator for REFEDS MFA.
Updates dependencies to latest library versions.
Only modifies code to support newer Java and Opensaml changes.
Supports Java 11.